--- a/index.html
+++ b/index.html
@@ -6,7 +6,29 @@
     <title>Technical documentation page</title>
 </head>
 <body>
-  <nav id="navbar"></nav>
+  <nav id="navbar">
+    <header>CSS Documentation</header>
+    <ul>
+        <li>
+            <a class="nav-link" href=""></a>
+        </li>
+        <li>
+            <a class="nav-link" href=""></a>
+        </li>
+        <li>
+            <a class="nav-link" href=""></a>
+        </li>
+        <li>
+            <a class="nav-link" href=""></a>
+        </li>
+        <li>
+            <a class="nav-link" href=""></a>
+        </li>
+        <li>
+            <a class="nav-link" href=""></a>
+        </li>
+    </ul>
+  </nav>
   <main id="main-doc">
 <section class="main-section">
     <header id=""></header>
