--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
 </head>
 <body>
   <nav id="navbar">
-    <header>CSS Documentation</header>
+    <header>In this article</header>
     <ul>
         <li>
-            <a class="nav-link" href=""></a>
+            <a class="nav-link" href="">Documentation for Web-Developers</a>
         </li>
         <li>
-            <a class="nav-link" href=""></a>
+            <a class="nav-link" href="">Web Technology References</a>
         </li>
         <li>
-            <a class="nav-link" href=""></a>
+            <a class="nav-link" href="">Developer Tools Documentation</a>
         </li>
         <li>
-            <a class="nav-link" href=""></a>
+            <a class="nav-link" href="">Accessibility</a>
         </li>
         <li>
-            <a class="nav-link" href=""></a>
+            <a class="nav-link" href="">CSS: Cascading Style Sheets</a>
         </li>
         <li>
-            <a class="nav-link" href=""></a>
+            <a class="nav-link" href="">Developer Guides</a>
         </li>
     </ul>
   </nav>
