closed off each section.

--- a/index.html
+++ b/index.html
@@ -10,57 +10,60 @@
     <header>In this article</header>
     <ul>
         <li>
-            <a class="nav-link" href="">Documentation for Web-Developers</a>
+            <a class="nav-link" href="Documentation_for_Web-Developers">Documentation for Web-Developers</a>
         </li>
         <li>
-            <a class="nav-link" href="">Web Technology References</a>
+            <a class="nav-link" href="Web_Technology_References">Web Technology References</a>
         </li>
         <li>
-            <a class="nav-link" href="">Developer Tools Documentation</a>
+            <a class="nav-link" href="Developer_Tools_Documentation">Developer Tools Documentation</a>
         </li>
         <li>
-            <a class="nav-link" href="">Accessibility</a>
+            <a class="nav-link" href="Accessibility">Accessibility</a>
         </li>
         <li>
-            <a class="nav-link" href="">CSS: Cascading Style Sheets</a>
+            <a class="nav-link" href="CSS:_Cascading_Style_Sheets">CSS: Cascading Style Sheets</a>
         </li>
         <li>
-            <a class="nav-link" href="">Developer Guides</a>
+            <a class="nav-link" href="Developer_Guides">Developer Guides</a>
         </li>
     </ul>
   </nav>
   <main id="main-doc">
 <section class="main-section">
-    <header id=""></header>
+    <header id="Documentation_for_Web-Developers"></header>
     <p></p>
     <p></p>
     <code></code>
     <li></li>
+</section>
 <section class="main-section">
-    <header id=""></header>
+    <header id="Web_Technology_References"></header>
     <p></p>
     <p></p>
     <code></code>
     <li></li>
+</section>
 <section class="main-section">
-    <header id=""></header>
+    <header id="Developer_Tools_Documentation"></header>
     <p></p>
     <p></p>
     <code></code>
     <li></li>
+</section>
 <section class="main-section">
-    <header id=""></header>
+    <header id="Accessibility"></header>
     <p></p> 
     <p></p>
     <code></code>
     <li></li>
+</section>
 <section class="main-section">
-    <header id=""></header>
+    <header id="CSS:_Cascading_Style_Sheets"></header>
     <p></p>
     <p></p>
     <code></code>
     <li></li>
-
 </section>
 
   </main>   
