--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Technical documentation page</title>
 </head>
 <body>
@@ -10,57 +11,86 @@
     <header>In this article</header>
     <ul>
         <li>
-            <a class="nav-link" href="Documentation_for_Web-Developers">Documentation for Web-Developers</a>
+            <a class="nav-link" href="#Documentation_for_Web-Developers">Documentation for Web-Developers</a>
         </li>
         <li>
-            <a class="nav-link" href="Web_Technology_References">Web Technology References</a>
+            <a class="nav-link" href="#Web_Technology_References">Web Technology References</a>
         </li>
         <li>
-            <a class="nav-link" href="Developer_Tools_Documentation">Developer Tools Documentation</a>
+            <a class="nav-link" href="#Developer_Tools_Documentation">Developer Tools Documentation</a>
         </li>
         <li>
-            <a class="nav-link" href="Accessibility">Accessibility</a>
+            <a class="nav-link" href="#Accessibility">Accessibility</a>
         </li>
         <li>
-            <a class="nav-link" href="CSS:_Cascading_Style_Sheets">CSS: Cascading Style Sheets</a>
+            <a class="nav-link" href="#CSS">CSS</a>
         </li>
         <li>
-            <a class="nav-link" href="Developer_Guides">Developer Guides</a>
+            <a class="nav-link" href="#Developer_Guides">Developer Guides</a>
         </li>
     </ul>
   </nav>
   <main id="main-doc">
-<section class="main-section">
-    <header id="Documentation_for_Web-Developers"></header>
+<section class="main-section" id="Documentation_for_Web-Developers">
+    <header >Documentation for Web-Developers</header>
+    <p>Welcome to our comprehensive documentation for web developers! Whether you're just starting out or looking to expand your knowledge, we've got you covered. In this documentation, we'll explore different types of programming languages that are essential for front-end web development, delve into web technology references, provide guidance on developer tools, discuss accessibility principles, and offer developer guides to help you build amazing web experiences.</p>
+    <p>Front-End Programming Languages</p>
+
+    <p>Front-end web development involves creating the user interface and experience of a website. Here are some essential programming languages used in front-end development:</p>
+    <ol>
+        <li>HTML: (Hypertext Markup Language)</li>
+    <p>HTML (Hypertext Markup Language): HTML is the standard markup language for creating web pages. It defines the structure and content of a web page.</p>
+    <pre>
+        <code>
+            sample code goes here
+        </code>
+    </pre>
+    <li>CSS (Cascading Style Sheets): </li>
+<p>CSS is used to style the HTML elements and define their appearance on the web page.</p></ol>
+<p>These are just the basics to get you started. Dive deeper into each language to unlock its full potential in web development.</p>
+<pre>
+    <code>
+        .class{
+            width: 50%; 
+            padding: 20px;
+            margin-bottom: 20px;
+            background-color: #fff;
+            border: 1px solid #ccc;
+        }
+    </code>
+    </pre>
+</section>
+<section class="main-section" id="Web_Technology_References">
+    <header >Web Technology References</header>
+    <p>In this section, we'll provide references and resources for various web technologies, including frameworks, libraries, and APIs. Stay tuned for updates!</p>
+    <li></li>
+</section>
+<section class="main-section" id="Developer_Tools_Documentation">
+    <header >Developer Tools Documentation</header>
+    <p>Discover the tools and software that can streamline your web development process. From code editors to browser developer tools, we'll cover everything you need to know to enhance your workflow.</p>
+    <p></p>
+    <code></code>
+    <li></li>
+</section>
+<section class="main-section" id="Accessibility">
+    <header >Accessibility</header>
+    <p>Accessibility is crucial in web development to ensure that everyone, regardless of ability, can access and use your website. Learn about accessibility standards and best practices to make your websites inclusive for all users.</p> 
+    <p></p>
+    <code></code>
+    <li></li>
+</section>
+<section class="main-section" id="CSS">
+    <header >CSS</header>
     <p></p>
     <p></p>
     <code></code>
     <li></li>
 </section>
-<section class="main-section">
-    <header id="Web_Technology_References"></header>
-    <p></p>
-    <p></p>
-    <code></code>
-    <li></li>
-</section>
-<section class="main-section">
-    <header id="Developer_Tools_Documentation"></header>
-    <p></p>
-    <p></p>
-    <code></code>
-    <li></li>
-</section>
-<section class="main-section">
-    <header id="Accessibility"></header>
-    <p></p> 
-    <p></p>
-    <code></code>
-    <li></li>
-</section>
-<section class="main-section">
-    <header id="CSS:_Cascading_Style_Sheets"></header>
-    <p></p>
+<section class="main-section" id="Developer_Guides">
+    <header >Developer Guides</header>
+    <p>Explore our developer guides to gain insights and best practices for building responsive, accessible, and high-performing websites. From beginner tutorials to advanced techniques, we've got resources to help you level up your skills.
+
+        Start exploring and enhancing your web development journey today! If you have any questions or feedback, don't hesitate to reach out to us. Happy coding!</p>
     <p></p>
     <code></code>
     <li></li>
